<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/coordinator"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        style="@style/Widget.MaterialComponents.AppBarLayout.Surface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                style="?attr/textAppearanceHeadline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/offer_section"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_offer"
                android:textColor="@color/colorSecondary" />
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProducts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layoutAnimation="@anim/layout_animation_fall_down"
        android:clipToPadding="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        tools:listitem="@layout/cv_product_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:elevation="8dp"
        android:visibility="gone"
        android:src="@drawable/ic_filter"/>

    <FrameLayout
        android:id="@+id/fabScrim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:background="@color/colorScrim"
        android:animateLayoutChanges="true"
        android:elevation="8dp"
        android:visibility="gone" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvSort"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:cardElevation="12dp"
        app:cardCornerRadius="4dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:visibility="gone"
        app:cardBackgroundColor="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_by"
                android:padding="8dp"
                android:textAlignment="center"
                android:background="@color/colorDivider"
                android:textColor="@color/material_on_background_emphasis_high_type"
                style="@style/TextAppearance.Overline"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="0dp">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/popularity"
                    android:paddingStart="8dp"
                    android:paddingEnd="0dp"
                    style="@style/TextAppearance.Subtitle1"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="0dp"
                    style="@style/TextAppearance.Subtitle1"
                    android:text="@string/better_discount"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price_high_low"
                    android:paddingStart="8dp"
                    android:paddingEnd="0dp"
                    style="@style/TextAppearance.Subtitle1"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price_low_high"
                    android:paddingStart="8dp"
                    android:paddingEnd="0dp"
                    style="@style/TextAppearance.Subtitle1"/>
            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnApply"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:cornerRadius="0dp"
                android:text="@string/apply"
                android:backgroundTint="@color/colorSecondary"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>